Use sd-matrix