@@ -1,57 +1,31 @@
-import AkkaAxis._
-
 lazy val `akka-guice` = projectMatrix
   .in(file("."))
-  .customRow(
-    scalaVersions = Seq(scala211, scala212, scala213),
-    axisValues = Seq(akka25, VirtualAxis.jvm),
-    Seq(
-      moduleName := name.value + "_2_5",
-      libraryDependencies ++= Seq(
-        akka25.module("actor"),
-        akka25.module("testkit") % Test,
-        "com.google.inject.extensions" % "guice-assistedinject" % "4.1.0",
-      ),
-    ),
-  )
-  .customRow(
-    scalaVersions = Seq(scala212, scala213, scala3),
-    axisValues = Seq(akka26, VirtualAxis.jvm),
-    Seq(
-      moduleName := name.value,
-      libraryDependencies ++= Seq(
-        akka26.module("actor"),
-        akka26.module("testkit") % Test,
-        "com.google.inject.extensions" % "guice-assistedinject" % "4.2.3",
-      ),
-    ),
-  )
+  .akkaAxis(akka25, Seq(scala211, scala212, scala213))
+  .akkaAxis(akka26, Seq(scala212, scala213, scala3))
   .settings(
-    libraryDependencies += "org.scalatest" %% "scalatest" % "3.2.10" % Test,
+    libraryDependencies ++= Seq(
+      "com.google.inject.extensions" % "guice-assistedinject" % (akkaAxis.value match {
+        // To keep compatible with akka-guid:3.2.0. TODO update
+        case `akka25` => "4.1.0"
+        case _        => "4.2.3"
+      }),
+      "org.scalatest" %% "scalatest" % "3.2.10" % Test,
+    ) ++ akka("actor", "testkit" -> Test).value,
     scalacOptions := {
       val old = scalacOptions.value
       CrossVersion.scalaApiVersion(scalaVersion.value) match {
         case Some((2, n)) if n > 11 =>
           old :+ raw"-Wconf:msg=isAccessible in class AccessibleObject:i"
-        // TODO remove for scala3 when the following PR is released
-        // https://github.com/lampepfl/dotty/pull/12857
-        case _ => old.filterNot(_ == "-Xfatal-warnings")
+        case _ => old
       }
     },
+    // opens java.base/java.lang for java 16+ to workaround error:
+    // InaccessibleObjectException: Unable to make protected final java.lang.Class
+    //  java.lang.ClassLoader.defineClass(java.lang.String,byte[],int,int,java.security.ProtectionDomain)
+    //  throws java.lang.ClassFormatError accessible:
+    //  module java.base does not "opens java.lang" to unnamed module @42a6eabd (ReflectUtils.java:61)
+    addOpensForTest(),
   )
-
-// opens java.base/java.lang for java 16+
-// to workaround error:
-// InaccessibleObjectException: Unable to make protected final java.lang.Class
-//  java.lang.ClassLoader.defineClass(java.lang.String,byte[],int,int,java.security.ProtectionDomain)
-//  throws java.lang.ClassFormatError accessible:
-//  module java.base does not "opens java.lang" to unnamed module @42a6eabd (ReflectUtils.java:61)
-lazy val javaVersion: Int = scala.sys
-  .props("java.specification.version")
-  .split('.')
-  .dropWhile(_ == "1")
-  .head
-  .toInt
 
 inThisBuild(
   Seq(
@@ -64,11 +38,6 @@ inThisBuild(
         url("https://sandinh.com")
       ),
     ),
-    Test / fork := javaVersion >= 16,
-    Test / javaOptions := {
-      if (javaVersion < 16) Nil
-      else Seq("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-    }
   )
 )
 
